saves/test/demo_full_20240802_193545/shift18/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp shift18_tb.v shift18.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
shift18_tb.v:153: $finish called at 320000 (1ps)

iverilog cmd 2 error:

